// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsPage should not render statistics because there is no filter 1`] = `null`;

exports[`StatsPage should render "Overview" statistics 1`] = `
<div>
  Stats Component: 
  overview
</div>
`;

exports[`StatsPage should render "Revenue" statistics 1`] = `
<div>
  Revenue Stats Component
</div>
`;

exports[`StatsPage should render "Satisfaction" statistics 1`] = `
<div>
  Stats Component: 
  satisfaction
</div>
`;

exports[`StatsPage testing default filters should ensure the default period is using user's timezone 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Immutable.Map {
        "period": Immutable.Map {
          "start_datetime": "2019-08-28T00:00:00+02:00",
          "end_datetime": "2019-09-03T23:59:59+02:00",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`StatsPage testing default filters should ensure the default value 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Immutable.Map {
        "period": Immutable.Map {
          "start_datetime": "2019-08-28T00:00:00-07:00",
          "end_datetime": "2019-09-03T23:59:59-07:00",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
